// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SWITCH_LAYOUT_SYSTEM switches from flex to pins correctly 1`] = `
Array [
  Object {
    "arbitraryJSBlock": null,
    "blockOrExpression": "block",
    "declarationSyntax": "var",
    "isFunction": true,
    "name": "App",
    "param": null,
    "propsUsed": Array [],
    "returnStatementComments": Object {
      "leadingComments": Array [],
      "trailingComments": Array [],
    },
    "rootElement": Object {
      "children": Array [
        Object {
          "children": Array [],
          "name": Object {
            "baseVariable": "View",
            "propertyPath": Object {
              "propertyElements": Array [],
            },
          },
          "props": Array [
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "data-uid",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "uid": "",
                "value": "bbb",
              },
            },
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "style",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "uid": "",
                "value": Object {
                  "height": 300,
                  "left": 0,
                  "position": "absolute",
                  "top": 0,
                  "width": 200,
                },
              },
            },
          ],
          "type": "JSX_ELEMENT",
          "uid": "",
        },
      ],
      "name": Object {
        "baseVariable": "View",
        "propertyPath": Object {
          "propertyElements": Array [],
        },
      },
      "props": Array [
        Object {
          "comments": Object {
            "leadingComments": Array [],
            "trailingComments": Array [],
          },
          "key": "data-uid",
          "type": "JSX_ATTRIBUTES_ENTRY",
          "value": Object {
            "comments": Object {
              "leadingComments": Array [],
              "trailingComments": Array [],
            },
            "type": "ATTRIBUTE_VALUE",
            "uid": "",
            "value": "aaa",
          },
        },
        Object {
          "comments": Object {
            "leadingComments": Array [],
            "trailingComments": Array [],
          },
          "key": "style",
          "type": "JSX_ATTRIBUTES_ENTRY",
          "value": Object {
            "comments": Object {
              "leadingComments": Array [],
              "trailingComments": Array [],
            },
            "type": "ATTRIBUTE_VALUE",
            "uid": "",
            "value": Object {
              "backgroundColor": "#FFFFFF",
              "position": "absolute",
            },
          },
        },
      ],
      "type": "JSX_ELEMENT",
      "uid": "",
    },
    "type": "UTOPIA_JSX_COMPONENT",
    "usedInReactDOMRender": false,
  },
  Object {
    "arbitraryJSBlock": null,
    "blockOrExpression": "block",
    "declarationSyntax": "var",
    "isFunction": false,
    "name": "storyboard",
    "param": null,
    "propsUsed": Array [],
    "returnStatementComments": Object {
      "leadingComments": Array [],
      "trailingComments": Array [],
    },
    "rootElement": Object {
      "children": Array [
        Object {
          "children": Array [],
          "name": Object {
            "baseVariable": "Scene",
            "propertyPath": Object {
              "propertyElements": Array [],
            },
          },
          "props": Array [
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "component",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "definedElsewhere": Array [
                  "App",
                ],
                "elementsWithin": Object {},
                "javascript": "App",
                "originalJavascript": "App",
                "sourceMap": null,
                "transpiledJavascript": "return App",
                "type": "ATTRIBUTE_OTHER_JAVASCRIPT",
                "uid": "",
              },
            },
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "data-uid",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "uid": "",
                "value": "scene-0",
              },
            },
          ],
          "type": "JSX_ELEMENT",
          "uid": "",
        },
      ],
      "name": Object {
        "baseVariable": "Storyboard",
        "propertyPath": Object {
          "propertyElements": Array [],
        },
      },
      "props": Array [
        Object {
          "comments": Object {
            "leadingComments": Array [],
            "trailingComments": Array [],
          },
          "key": "data-uid",
          "type": "JSX_ATTRIBUTES_ENTRY",
          "value": Object {
            "comments": Object {
              "leadingComments": Array [],
              "trailingComments": Array [],
            },
            "type": "ATTRIBUTE_VALUE",
            "uid": "",
            "value": "utopia-storyboard-uid",
          },
        },
      ],
      "type": "JSX_ELEMENT",
      "uid": "",
    },
    "type": "UTOPIA_JSX_COMPONENT",
    "usedInReactDOMRender": false,
  },
]
`;

exports[`SWITCH_LAYOUT_SYSTEM switches from pins to flex correctly 1`] = `
Array [
  Object {
    "arbitraryJSBlock": null,
    "blockOrExpression": "block",
    "declarationSyntax": "var",
    "isFunction": true,
    "name": "App",
    "param": null,
    "propsUsed": Array [],
    "returnStatementComments": Object {
      "leadingComments": Array [],
      "trailingComments": Array [],
    },
    "rootElement": Object {
      "children": Array [
        Object {
          "children": Array [],
          "name": Object {
            "baseVariable": "View",
            "propertyPath": Object {
              "propertyElements": Array [],
            },
          },
          "props": Array [
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "data-uid",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "uid": "",
                "value": "bbb",
              },
            },
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "style",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "uid": "",
                "value": Object {
                  "flexBasis": 200,
                  "height": 300,
                  "position": "relative",
                },
              },
            },
          ],
          "type": "JSX_ELEMENT",
          "uid": "",
        },
      ],
      "name": Object {
        "baseVariable": "View",
        "propertyPath": Object {
          "propertyElements": Array [],
        },
      },
      "props": Array [
        Object {
          "comments": Object {
            "leadingComments": Array [],
            "trailingComments": Array [],
          },
          "key": "data-uid",
          "type": "JSX_ATTRIBUTES_ENTRY",
          "value": Object {
            "comments": Object {
              "leadingComments": Array [],
              "trailingComments": Array [],
            },
            "type": "ATTRIBUTE_VALUE",
            "uid": "",
            "value": "aaa",
          },
        },
        Object {
          "comments": Object {
            "leadingComments": Array [],
            "trailingComments": Array [],
          },
          "key": "style",
          "type": "JSX_ATTRIBUTES_ENTRY",
          "value": Object {
            "comments": Object {
              "leadingComments": Array [],
              "trailingComments": Array [],
            },
            "type": "ATTRIBUTE_VALUE",
            "uid": "",
            "value": Object {
              "backgroundColor": "#FFFFFF",
              "display": "flex",
            },
          },
        },
      ],
      "type": "JSX_ELEMENT",
      "uid": "",
    },
    "type": "UTOPIA_JSX_COMPONENT",
    "usedInReactDOMRender": false,
  },
  Object {
    "arbitraryJSBlock": null,
    "blockOrExpression": "block",
    "declarationSyntax": "var",
    "isFunction": false,
    "name": "storyboard",
    "param": null,
    "propsUsed": Array [],
    "returnStatementComments": Object {
      "leadingComments": Array [],
      "trailingComments": Array [],
    },
    "rootElement": Object {
      "children": Array [
        Object {
          "children": Array [],
          "name": Object {
            "baseVariable": "Scene",
            "propertyPath": Object {
              "propertyElements": Array [],
            },
          },
          "props": Array [
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "component",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "definedElsewhere": Array [
                  "App",
                ],
                "elementsWithin": Object {},
                "javascript": "App",
                "originalJavascript": "App",
                "sourceMap": null,
                "transpiledJavascript": "return App",
                "type": "ATTRIBUTE_OTHER_JAVASCRIPT",
                "uid": "",
              },
            },
            Object {
              "comments": Object {
                "leadingComments": Array [],
                "trailingComments": Array [],
              },
              "key": "data-uid",
              "type": "JSX_ATTRIBUTES_ENTRY",
              "value": Object {
                "comments": Object {
                  "leadingComments": Array [],
                  "trailingComments": Array [],
                },
                "type": "ATTRIBUTE_VALUE",
                "uid": "",
                "value": "scene-0",
              },
            },
          ],
          "type": "JSX_ELEMENT",
          "uid": "",
        },
      ],
      "name": Object {
        "baseVariable": "Storyboard",
        "propertyPath": Object {
          "propertyElements": Array [],
        },
      },
      "props": Array [
        Object {
          "comments": Object {
            "leadingComments": Array [],
            "trailingComments": Array [],
          },
          "key": "data-uid",
          "type": "JSX_ATTRIBUTES_ENTRY",
          "value": Object {
            "comments": Object {
              "leadingComments": Array [],
              "trailingComments": Array [],
            },
            "type": "ATTRIBUTE_VALUE",
            "uid": "",
            "value": "utopia-storyboard-uid",
          },
        },
      ],
      "type": "JSX_ELEMENT",
      "uid": "",
    },
    "type": "UTOPIA_JSX_COMPONENT",
    "usedInReactDOMRender": false,
  },
]
`;
